--- a/src/main/resources/templates/admin-fragments/body_scripts.html
+++ b/src/main/resources/templates/admin-fragments/body_scripts.html
@@ -7,4 +7,6 @@
 	<script th:src="@{/common/js/bootstrap.min.js}"></script>
 	<script th:src="@{/common/js/jquery-ui.min.js}"></script>
 	<script th:src="@{/common/js/jquery.slicknav.js}"></script>
+	<script th:src="@{/common/js/jquery.twbsPagination.min.js}"></script>
+	<script th:src="@{/common/js/jquery.twbsPagination.js}"></script>
 </th:block>
