--- a/src/main/resources/templates/admin-fragments/header.html
+++ b/src/main/resources/templates/admin-fragments/header.html
@@ -17,7 +17,7 @@
                                 <a class="dropdown-item dropdown-item-click" th:href="@{/admin/genres}">Thể loại</a>
                                 <a class="dropdown-item dropdown-item-click" th:href="@{/admin/books/page=1}">Sách</a>
                                 <a class="dropdown-item dropdown-item-click" th:href="@{/admin/users}">Người dùng</a>
-                                <a class="dropdown-item dropdown-item-click" th:href="@{/admin/orders}">Đơn hàng</a>
+                                <a class="dropdown-item dropdown-item-click" th:href="@{/admin/cart}">Đơn hàng</a>
                             </div>
                         </li>
                     </ul>
