--- a/src/main/resources/templates/user-fragments/htmlhead.html
+++ b/src/main/resources/templates/user-fragments/htmlhead.html
@@ -9,7 +9,8 @@
       <link rel="stylesheet" th:href="@{/common/css/jquery-ui.min.css}"/>
       <link rel="stylesheet" th:href="@{/common/css/fontawesome.css}"/>
       <link rel="stylesheet" th:href="@{/common/css/fontawesome.min.css}"/>
-      <link rel="stylesheet" th:href="@{/admin/index.css}"/> 
+      <link rel="stylesheet" th:href="@{/user/index.css}"/> 
+      <link rel="stylesheet" th:href="@{/user/slider.css}"/> 
       <script src="https://kit.fontawesome.com/f4adaf5822.js" crossorigin="anonymous"></script>
   </head>
 </head>
