--- a/src/main/resources/templates/user-layout.html
+++ b/src/main/resources/templates/user-layout.html
@@ -7,5 +7,6 @@
 		<th:block layout:fragment="content" />
 		<th:block layout:replace="~{user-fragments/footer}" />
 		<th:block layout:replace="~{user-fragments/body_scripts :: end}" />
+		<th:block layout:fragment="lib_script" />
 	</body>
 </html>
