--- a/src/main/resources/templates/user-pages/books/index.html
+++ b/src/main/resources/templates/user-pages/books/index.html
@@ -65,6 +65,10 @@
     	<span style="color: black" th:unless="${currentPage <totalPage}"class="page-link"> Trang cuối</span>
      </li>
   </ul> 
-    </div>	
+  	<ul id="pagination-demo" class="pagination-lg"></ul>
+    </div>
 </th:block>
+<script th:inline="javascript">
+
+</script>
 </html>
