--- a/src/main/resources/templates/user-fragments/body_scripts.html
+++ b/src/main/resources/templates/user-fragments/body_scripts.html
@@ -9,4 +9,6 @@
 	<script th:src="@{/common/js/jquery.slicknav.js}"></script>
 	<script th:src="@{/common/js/fontawesome.min.js}"></script>
 	<script th:src="@{/common/js/fontawesome.js}"></script>
+	<script th:src="@{/common/js/jquery.twbsPagination.min.js}"></script>
+	<script th:src="@{/common/js/jquery.twbsPagination.js}"></script>
 </th:block>
