--- a/src/main/resources/templates/user-pages/books/detail.html
+++ b/src/main/resources/templates/user-pages/books/detail.html
@@ -7,6 +7,7 @@
 <th:block layout:fragment="content">
 	<div class="mt-5 pt-4">
         <div class="container dark-grey-text mt-5">
+        <input id="bookId" type="hidden" th:value="${book.id}">
             <!--Grid row-->
             <div class="row wow fadeIn">
                 <!--Grid column-->
@@ -42,8 +43,8 @@
                             <!-- Default input -->
                             <input id="input-qty" name="quantity" type="number" value="1"  class="form-control"
                                 style="width: 100px">
-                            <button class="btn btn-outline-success btn-md my-0 p add-to-cart-btn" >Thêm vào giỏ hàng
-                                <i class="fas fa-shopping-cart ml-1"></i>
+                            <button class="btn btn-outline-success btn-md my-0 p add-to-cart-btn" ><i class="fas fa-shopping-cart ml-1"></i>Thêm vào giỏ hàng
+                                
                             </button>
 
                  
@@ -76,4 +77,19 @@
     </div>
     <div style="margin-bottom: 100px"></div>
 </th:block>
+ <th:block layout:fragment="lib_script">
+		<script>
+			$('body').on('click', '.add-to-cart-btn', function(){
+				var bId = $('#bookId').val();
+				var quantity = $('#input-qty').val();
+				console.log(bId);
+				console.log(quantity);
+				if(!quantity || quantity<=0){
+					alert("Vui lòng nhập số lượng sách");
+				}else{
+					window.location.href = `/cart/add?bookId=${bId}&quantity=${quantity}`;				
+				}
+			});
+		</script>
+	</th:block>
 </html>
